force-app/main/default/objects/Portal_Page__c/Portal_Page__c.object-meta.xml
<CustomObject>
    <label>Portal Page</label>
    <nameField>
        <label>Portal Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>