force-app/main/default/objects/Portal_Page__c/fields/Main_Content__c.field-meta.xml
<CustomField>
    <fullName>Main_Content__c</fullName>
    <label>Main Content</label>
    <length>70</length>
    <type>Text</type>
</CustomField>