force-app/main/default/objects/Portal_Page__c/fields/Parent_Portal_Page__c.field-meta.xml
<CustomField>
    <fullName>Parent_Portal_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Page</label>
    <referenceTo>Portal_Page__c</referenceTo>
    <relationshipLabel>Portal Pages</relationshipLabel>
    <relationshipName>Parent_Portal_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>