force-app/main/default/objects/Portal_Page__c/fields/Scrolling_Message__c.field-meta.xml
<CustomField>
    <fullName>Scrolling_Message__c</fullName>
    <label>Scrolling Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>